[gd_scene load_steps=14 format=3 uid="uid://d0cs0u7t84vpp"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_lnjsm"]
[ext_resource type="PackedScene" uid="uid://dxrvyg2gkpkyn" path="res://scenes/player.tscn" id="1_ytolg"]
[ext_resource type="PackedScene" uid="uid://sr2vyno2c7su" path="res://scenes/obstacle.tscn" id="2_iu102"]
[ext_resource type="PackedScene" uid="uid://bgpx1hv1uwe30" path="res://scenes/background.tscn" id="3_20bfv"]
[ext_resource type="Texture2D" uid="uid://bpcrkcvc4as1w" path="res://assets/ground.png" id="3_aqwh4"]
[ext_resource type="Texture2D" uid="uid://1mx1dhexyro4" path="res://assets/ui/buttons/pause_button.png" id="6_shwit"]
[ext_resource type="FontFile" uid="uid://cu8aacyl5o2xw" path="res://assets/ui/font/flappy-font.ttf" id="6_us5qp"]
[ext_resource type="Texture2D" uid="uid://qrw2nlb04f7x" path="res://assets/ui/buttons/pause_button_pressed.png" id="7_evylj"]
[ext_resource type="PackedScene" uid="uid://bau0ceijodblo" path="res://scenes/game_over_menu.tscn" id="9_v8y3l"]
[ext_resource type="AudioStream" uid="uid://bv3pqb5o4d7t" path="res://assets/audio/point.wav" id="10_lj236"]
[ext_resource type="Texture2D" uid="uid://pe8e1rd34ld0" path="res://assets/ui/titles/get_ready_title.png" id="10_sc6a6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4d76a"]
size = Vector2(1052, 304.625)

[sub_resource type="LabelSettings" id="LabelSettings_tq3rl"]
font = ExtResource("6_us5qp")
font_size = 140
shadow_size = 25
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 0)

[node name="Main" type="Node"]
script = ExtResource("1_lnjsm")
obstacle_scene = ExtResource("2_iu102")
obstacle_speed = 8

[node name="Background" parent="." instance=ExtResource("3_20bfv")]
unique_name_in_owner = true

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(459, 1257)
collision_layer = 4
collision_priority = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource("RectangleShape2D_4d76a")

[node name="TextureRect" type="TextureRect" parent="Ground"]
offset_left = -460.0
offset_top = -152.0
offset_right = -292.0
offset_bottom = -96.0
scale = Vector2(5, 5)
texture = ExtResource("3_aqwh4")

[node name="Player" parent="." instance=ExtResource("1_ytolg")]
unique_name_in_owner = true
position = Vector2(212, 599)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="ScoreLabel" type="Label" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -192.5
offset_top = 20.0
offset_right = 192.5
offset_bottom = 90.0
grow_horizontal = 2
text = "0"
label_settings = SubResource("LabelSettings_tq3rl")
horizontal_alignment = 1

[node name="PauseButton" type="TextureButton" parent="UI"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 1
anchors_preset = -1
offset_right = -71.6
offset_bottom = -76.0
scale = Vector2(5, 5)
pivot_offset = Vector2(-5, -5)
focus_mode = 0
action_mode = 0
texture_normal = ExtResource("6_shwit")
texture_pressed = ExtResource("7_evylj")
texture_hover = ExtResource("7_evylj")
stretch_mode = 5

[node name="GameOverMenu" parent="UI" instance=ExtResource("9_v8y3l")]
unique_name_in_owner = true
visible = false
layout_mode = 1
offset_left = 2.0
offset_right = 2.0

[node name="Title" type="TextureRect" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 214.0
offset_right = 300.0
offset_bottom = 358.0
grow_horizontal = 2
texture = ExtResource("10_sc6a6")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0

[node name="PointSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_lj236")
volume_db = -5.0
